--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-BOT_TOKEN=YOUR_TELEGRAM_BOT_TOKEN
-MANAGER_CHAT_ID=YOUR_MANAGER_CHAT_ID
+BOT_TOKEN=8386504564:AAGmT3i4k2JszgA6TnBqCPVwm8BDwRXqHy0
+MANAGER_CHAT_ID=98756449
