--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BOT_TOKEN=8386504564:AAGmT3i4k2JszgA6TnBqCPVwm8BDwRXqHy0
 MANAGER_CHAT_ID=98756449
-GOOGLE_CREDENTIALS_JSON=""
+GOOGLE_CREDENTIALS_JSON="1O9dpdrVOTW37ID3Y_RGAUTVJDBXRa3E3GW8O-jO8z6Q"
